examples/test/testpolicy3528.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3528
  namespace: namespace141
spec:
  podSelector:
    matchLabels:
      key25: value46
      key2: value30
      key36: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value49
          key1: value1
      podSelector:
        matchLabels:
          key43: value35
